chore: inital setup of category, subcategory, and item
